recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:9: error: not found: value side
		gauche(180-360/side);
                               ^